--- a/backend/package.json
+++ b/backend/package.json
@@ -25,7 +25,11 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./test/jest-e2e.json",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "migration:generate": "npm run typeorm -- migration:create -d src/database/migrations",
+    "migrate": "npm run typeorm -- migration:run -d src/config/ormconfig-migration.ts",
+    "migrate:down": "npm run typeorm -- migration:revert -d src/common/config/ormconfig-migration.ts",
+    "typeorm": "ts-node -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
   },
   "engines": {
     "node": "12.22.1"
