Readme file changes

--- a/backend/example.env
+++ b/backend/example.env
@@ -1,21 +1,24 @@
 PORT=3000
-
+NODE_ENV=development
 # BASE
 BASE_URL=/api
 DOCS_ENDPOINT=/docs
 AUTH_SECRET=
 ACCESS_EXP=
+REF_AUTH_SECRET=
 REFRESH_EXP=
 SOURCE_EMAIL=
 SESSION_SECRET=
+SALT_ROUNDS=
 
 # DATABASE CONFIG
-DB_TYPE=postgres
-DB_HOST=localhost
-DB_PORT=5432 
-DB_USER=
+DB_TYPE=
+DB_HOST=
+DB_PORT=
+DB_USER=postgres
 DB_PASSWORD=
 DB_NAME=
+DB_POOL_SIZE=
 
 # AWS
 AWS_ACCESS_KEY=
